<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="8dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp"
    android:layout_margin="2dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_margin="4dp"
        android:id="@+id/contact_img"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:contentDescription="@string/loading_contacts_desc"
        android:src="@drawable/user_hd" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/text_placeholder_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/text_placeholder_num"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/favorite"
        android:layout_margin="4dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/text_fav_description"
        android:src="@drawable/favorite_false" />

    </LinearLayout>
</android.support.v7.widget.CardView>
