<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ContactInfoActivity"
    tools:showIn="@layout/activity_contact_info">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#cfd8dc"></View>

        <RelativeLayout
            android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/activity_user_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:minHeight="150dp"
                android:src="@drawable/user_hd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/add_photo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignEnd="@+id/activity_user_image"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/activity_user_image"
                android:background="@drawable/oval"
                android:text="@string/plus_sign"
                android:textColor="@android:color/white"
                android:textSize="28sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_container">

            <TextView
                android:id="@+id/activity_display_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_display_name"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <EditText
                android:id="@+id/activity_display_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minWidth="100dp"
                android:singleLine="true"
                android:text="@string/text_placeholder_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/contact_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/mobile_phone"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <EditText
                android:id="@+id/activity_mobile_phone_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:minWidth="100dp"
                android:singleLine="true"
                android:text="@string/text_placeholder_num" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/activity_home_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/home_phone"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <EditText
                android:id="@+id/activity_home_phone_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:minWidth="100dp"
                android:singleLine="true"
                android:text="@string/text_placeholder_num" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/activity_work_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/work_phone"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <EditText
                android:id="@+id/activity_work_phone_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:minWidth="100dp"
                android:singleLine="true"
                android:text="@string/text_placeholder_num" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:id="@+id/activity_nickname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nickname"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <EditText
                android:id="@+id/activity_nickname_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minWidth="100dp"
                android:singleLine="true"
                android:text="@string/text_placeholder_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:id="@+id/activity_home_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/home_email"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <EditText
                android:id="@+id/activity_home_email_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:minWidth="100dp"
                android:singleLine="true"
                android:text="@string/text_placeholder_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <TextView
                android:id="@+id/activity_work_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/work_email"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <EditText
                android:id="@+id/activity_work_email_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:minWidth="100dp"
                android:singleLine="true"
                android:text="@string/text_placeholder_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout7"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/activity_company_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/company_name"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <EditText
                android:id="@+id/activity_company_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minWidth="100dp"
                android:singleLine="true"
                android:text="@string/text_placeholder_name" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>